Cambiado a patrón MVP

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Login MVC</string>
+    <string name="app_name">Login MVP</string>
     <!--
         Abreviaturas:
         - lyt: Layouts
